# CI

./: .ci-config.json.example  .gitignore  CI_INTEGRATION_SUMMARY.md  CLAUDE.adaptation.md  CLAUDE.md.enhanced  COMPARISON.md  Cargo.toml  ENHANCEMENTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  Makefile  README.md  README_VOICE_MODE.md  STANDARDIZATION_REPORT.md  STYLE_GUIDE.md  STYLE_UPDATE_GUIDE.md  TODO.md  build.ps1  install.sh  make.cmd  remove_cir_references.sh
.ci/: metadata.json
.ci/agents/: Athena.md  ProjectArchitect.md
Sessions/: 2025-05-22_cleanup_completion.md  2025-05-22_session_completion.md
docs/: README.md  VISUALIZATION_SYSTEM.md  VOICE_MODE.md  api_key_management.md  documentation_index.md  testing_framework.md  ui_components.md
docs/guides/: command_creation.md  legacy_commands.md
docs/helpers/: README.md  command.md  repository.md
docs/templates/: command.md  guide.md  helper.md
examples/: ui_demo.rs
src/: error_conversion_fix.patch  error_fix.patch  errors.rs  fix_error_module.txt  fixed_main.rs  main.rs  version.rs
src/commands/: agent_integrate.rs  agents.rs  brain.rs  commit_enhanced.rs  config.rs  create_command.rs  detach.rs  docs.rs  fix.rs  generator.rs  idea.rs  init.rs  intelligence.rs  key_enhanced.rs  legacy.rs  lifecycle.rs  ls.rs  registry.rs  session.rs  source_control.rs  system.rs  topology.rs  verify.rs  (+1 more)
tests/: advanced_tests.rs  api_key_tests.rs  command_tests.rs  helper_tests.rs  helper_utils.rs  integration_override_tests.rs  integration_tests.rs  main.rs  test_helpers.rs
(+60 files in other folders)
