[package]
name = "CI"
version = "0.1.0"
edition = "2021"
description = "Collaborative Intelligence CLI - A modern CLI for the Collaborative Intelligence system"
authors = ["Collaborative Intelligence Team"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
glob = "0.3"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
log = "0.4"
env_logger = "0.10"
path-absolutize = "3.1"
colored = "2.0"
tempfile = "3.8"
uuid = { version = "1.4", features = ["v4"] }
lazy_static = "1.4"
term_size = "0.3"

[[bin]]
name = "CI"
path = "src/main.rs"